bezier-curve/src/App.css
@import "mafs/core.css";

body {
  margin: 0;
  padding: 0;
  font-family: "Tauri", sans-serif;
  height: 100vh;
  background: linear-gradient(135deg, #2c3e50, #4ca1af);
  display: flex;
  justify-content: center;
  align-items: center;
}

h1 {
  color: #fff;
  text-align: center;
}

.container {
  display: flex;
  flex-direction: column;
  align-items: center;
  background: linear-gradient(45deg, #1e272e, #353b48);
  padding: 20px;
  border-radius: 10px;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
}

.input-group {
  display: flex;
  align-items: center;
  margin-bottom: 10px;
}

.label {
  color: #fff;
  width: 80px;
  margin-right: 10px;
}

.inputGroup {
  display: flex;
}

.inputRow {
  display: flex;
  align-items: center;
  margin-bottom: 10px;
}

.input {
  flex: 1;
  margin-right: 10px;
  padding: 8px;
  border: none;
  border-radius: 5px;
  background-color: #fff;
}

.input:last-child {
  margin-right: 0;
}

.addButton {
  width: 100%;
  margin-top: 10px;
  margin-bottom: 20px;
  padding: 10px;
  border: none;
  border-radius: 5px;
  background-color: #2ecc71;
  color: #fff;
  cursor: pointer;
}

.addButton:hover {
  background-color: #27ae60;
}

